be/src/exec/file-metadata-utils.cc
@@ -139,7 +139,6 @@ void FileMetadataUtils::AddIcebergColumns(MemPool* mem_pool, Tuple** template_tu
 bool FileMetadataUtils::IsValuePartitionCol(const SlotDescriptor* slot_desc) {
   DCHECK(context_ != nullptr);
   DCHECK(file_desc_ != nullptr);
-  if (slot_desc->parent() != scan_node_->tuple_desc()) return false;
   if (slot_desc->col_pos() < scan_node_->num_partition_keys() &&
       !slot_desc->IsVirtual()) {
     return true;
